# usd-qtpy

./: .gitignore  LICENSE  README.md  example_window.py  pyproject.toml
.github/workflows/: python-publish.yml
assets/turntable/: README.md  turntable_preset.usd  turntable_preset.usda
usd_qtpy/: __main__.py  data_model.py  editor.py  layer_diff.py  layer_editor.py  prim_delegate.py  prim_hierarchy.py  prim_hierarchy_cache.py  prim_hierarchy_model.py  prim_spec_editor.py  prim_type_icons.py  references.py  variants.py  version.py  viewer.py
usd_qtpy/lib/: qt.py  usd.py  usd_merge_spec.py
usd_qtpy/render_util/: __init__.py  base.py  basecls.py  dialog.py  framing_camera.py  playblast.py  turntable.py
usd_qtpy/resources/: __init__.py
usd_qtpy/style/: __init__.py  data.json  resources.qrc  resources_rc.py  style.css
usd_qtpy/tree/: base.py  itemtree.py  simpletree.py
