[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["usd_qtpy"]


[project]
name = "usd-qtpy"
authors = [
    {name = "BigRoy"},
    {name = "Hannes"},
]
description = "Python Qt components for building custom USD tools."
readme = "README.md"
requires-python = ">=3.4"
keywords = ["usd", "qt"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"', "qtpy", "usd-core"
]
#dynamic = ["version"]
version = "0.0.1"

# [project.optional-dependencies]
# yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"


[project.urls]
Homepage = "https://github.com/BigRoy/usd-qtpy"
Documentation = "https://github.com/BigRoy/usd-qtpy"